syntax = "proto3";

package blog;

option go_package = "/blog";

service BlogService {
  rpc CreatePost(CreatePostRequest) returns (PostResponse);
  rpc ReadPost(ReadPostRequest) returns (PostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (PostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeleteResponse);
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
  string author = 3;
  string publication_date = 4;
  repeated string tags = 5;
}

message ReadPostRequest {
  string post_id = 1;
}

message UpdatePostRequest {
  string post_id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  repeated string tags = 5;
}

message DeletePostRequest {
  string post_id = 1;
}

message PostResponse {
  string post_id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  string publication_date = 5;
  repeated string tags = 6;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}
